--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 tmp
-bin
-build
-gen
-libs/*
 local.properties
 .dl
 *~
-*.jar
-progress
 *.log
+.settings
+bin/
+build/
+libs/
+gen/
+.classpath
+.project
+.gradle
+OLD
