--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="se.tube42.p9">
+    package="se.tube42.p9.android">
 
   <!-- Tell the system this app requires OpenGL ES 2.0. -->
   <uses-feature android:glEsVersion="0x00020000" android:required="true" />
