fix travis SDK issue and fix gradle run path

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: android
 android:
   components:
-    - build-tools-28.0.3
+    - build-tools-28.0.2
     - android-28
     - tools
     - platform-tools
@@ -22,3 +22,11 @@ branches:
   only:
     - master
     - /^rel-.*$/
+
+before_install:
+  - mkdir -p "$ANDROID_HOME/licenses"
+  - echo -e "\n24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
+
+
+addons:
+  artifacts: true
