--- a/android/build.gradle
+++ b/android/build.gradle
@@ -81,7 +81,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'se.tube42.p9/se.tube42.p9.MainActivity'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'se.tube42.p9.android/se.tube42.p9.android.MainActivity'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
